--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "sass": "node-sass --indent-width 4 --include-path ../../.. sass/develop.scss css/develop.css && node-sass --indent-width 4 --include-path ../../.. sass/release.scss css/release.css",
         "lint": "eslint .",
         "test": "npm run lint",
-        "jsdoc": "jsdoc --configure ./jsdoc.json --destination docs/v1.0.0 *.js readme.md node_modules/stb-*/*.js node_modules/spa-*/*.js node_modules/cjs-*/*.js -t ./node_modules/docdash"
+        "jsdoc": "jsdoc --configure ./jsdoc.json --destination docs/v1.0.0 *.js readme.md node_modules/spa-*/*.js node_modules/cjs-*/*.js -t ./node_modules/docdash"
     },
     "dependencies": {
         "spa-component": "1.*.*",
